tests: define NOMATCH helper
Similar to MATCH and the other spread-derived variables.

Signed-off-by: Zygmunt Krynicki <me@zygoon.pl>

--- a/spread.yaml
+++ b/spread.yaml
@@ -620,6 +620,8 @@ prepare: |
     # context.
     type MATCH | tail -n +2 > "$TESTSLIB"/spread-funcs.sh
     unset MATCH
+    type NOMATCH | tail -n +2 >> "$TESTSLIB"/spread-funcs.sh
+    unset NOMATCH
     type REBOOT | tail -n +2 >> "$TESTSLIB"/spread-funcs.sh
     unset REBOOT
 
