tests: use NOMATCH instead of not MATCH.
Signed-off-by: Zygmunt Krynicki <me@zygoon.pl>

--- a/tests/core/fsck-on-boot/task.yaml
+++ b/tests/core/fsck-on-boot/task.yaml
@@ -67,7 +67,7 @@ execute: |
       # sister fsck-vfat test does a controlled experiment in mounting a dirty
       # vfat, to ensure that we are aware of such changes.
       dmesg -c > dmesg-on-boot.log
-      not MATCH "Volume was not properly unmounted. Some data may be corrupt. Please run fsck." < dmesg-on-boot.log
+      NOMATCH "Volume was not properly unmounted. Some data may be corrupt. Please run fsck." < dmesg-on-boot.log
 
       # Unmount vfat again and read the dirty flag manually. The kernel doesn't
       # clean the dirty flag on unmount, if it was present on mount. This method is
