--- a/tests/core/netplan/task.yaml
+++ b/tests/core/netplan/task.yaml
@@ -15,9 +15,6 @@ prepare: |
     snap install test-snapd-netplan-apply --edge
 
 execute: |
-    # shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB/systems.sh"
-
     echo "The interface is disconnected by default"
     snap connections test-snapd-netplan-apply | MATCH 'network-setup-control +test-snapd-netplan-apply:network-setup-control +- +-'
 
@@ -54,7 +51,7 @@ execute: |
     echo "Ensure that the number of network restarts is greater after netplan apply was run"
     [ "$stopped_after" -gt "$stopped_before" ] && [ "$started_after" -gt "$started_before" ]
 
-    if is_core16_system; then
+    if os.query is-core16; then
         echo "Skipping Ubuntu Core 16 which does not have Info D-Bus method"
         exit 0
     fi
