--- a/tests/core/remove/task.yaml
+++ b/tests/core/remove/task.yaml
@@ -4,16 +4,13 @@ summary: Check that removal of essential snaps does not work
 systems: [-ubuntu-core-16-*]
 
 execute: |
-    # shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB/systems.sh"
-
     echo "Ensure snapd cannot be removed"
     if snap remove --purge snapd; then
         echo "The snapd snap should not be removable"
         exit 1
     fi
 
-    if is_core18_system; then
+    if os.query is-core18; then
         base=core18
     elif is_core20_system; then
         base=core20
