--- a/tests/main/interfaces-hostname-control/task.yaml
+++ b/tests/main/interfaces-hostname-control/task.yaml
@@ -8,9 +8,6 @@ prepare: |
     "$TESTSTOOLS"/snaps-state install-local test-snapd-sh
 
 execute: |
-    #shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB/systems.sh"
-
     hostname="$(hostname)"
 
     echo "The plug is disconnected by default"
@@ -24,7 +21,7 @@ execute: |
     [ "$hostname" = "$snap_hostname" ]
 
     # On core systems /etc/hostname is not writable
-    if is_classic_system; then
+    if os.query is-classic; then
         echo "And the /etc/hostname file can be written"
         test-snapd-sh.with-hostname-control-plug -c "echo $hostname > /etc/hostname"
     fi
