--- a/tests/main/interfaces-many-snap-provided/task.yaml
+++ b/tests/main/interfaces-many-snap-provided/task.yaml
@@ -36,11 +36,8 @@ execute: |
     #shellcheck source=tests/lib/dirs.sh
     . "$TESTSLIB"/dirs.sh
 
-    # shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB/systems.sh"
-
     PROVIDER_SNAP="test-snapd-policy-app-provider-classic"    
-    if is_core_system; then
+    if os.query is-core; then
         PROVIDER_SNAP="test-snapd-policy-app-provider-core"
     fi
 
@@ -72,12 +69,9 @@ execute: |
     done
 
 restore: |
-    # shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB/systems.sh"
-    
     # Remove the snaps to avoid timeout in next test
     PROVIDER_SNAP="test-snapd-policy-app-provider-classic"    
-    if is_core_system; then
+    if os.query is-core; then
         PROVIDER_SNAP="test-snapd-policy-app-provider-core"
     fi
     snap remove --purge "$PROVIDER_SNAP"
