--- a/tests/main/parallel-install-remove-after/task.yaml
+++ b/tests/main/parallel-install-remove-after/task.yaml
@@ -28,12 +28,9 @@ restore: |
     esac
 
 execute: |
-    #shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB"/systems.sh
-
     # install confined and classic snaps
     "$TESTSTOOLS"/snaps-state install-local test-snapd-sh
-    if is_classic_system ; then
+    if os.query is-classic ; then
         "$TESTSTOOLS"/snaps-state install-local test-snapd-classic-confinement --classic
     fi
 
@@ -42,33 +39,33 @@ execute: |
     # regular instances work
     # shellcheck disable=SC2016
     test-snapd-sh.sh -c 'echo confined $SNAP_INSTANCE_NAME works'
-    if is_classic_system ; then
+    if os.query is-classic ; then
         # shellcheck disable=SC2016
         test-snapd-classic-confinement.sh -c 'echo classic $SNAP_INSTANCE_NAME works'
     fi
 
     # new instances of same snaps
     "$TESTSTOOLS"/snaps-state install-local-as test-snapd-sh test-snapd-sh_foo
-    if is_classic_system ; then
+    if os.query is-classic ; then
         "$TESTSTOOLS"/snaps-state install-local-as test-snapd-classic-confinement test-snapd-classic-confinement_foo --classic
     fi
 
     # parallel instances works
     # shellcheck disable=SC2016
     test-snapd-sh_foo.sh -c 'echo confined $SNAP_INSTANCE_NAME works'
-    if is_classic_system ; then
+    if os.query is-classic ; then
         # shellcheck disable=SC2016
         test-snapd-classic-confinement_foo.sh -c 'echo classic $SNAP_INSTANCE_NAME works'
     fi
 
     # removal of snaps should not fail
     snap remove --purge test-snapd-sh
-    if is_classic_system ; then
+    if os.query is-classic ; then
         snap remove --purge test-snapd-classic-confinement
     fi
 
     # neither should the removal of instances
     snap remove --purge test-snapd-sh_foo
-    if is_classic_system ; then
+    if os.query is-classic ; then
         snap remove --purge test-snapd-classic-confinement_foo
     fi
