snap: rename "daemon-startup: inhibit" -> "install-mode: daemon-inhibit"

--- a/tests/lib/snaps/test-snapd-service/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-service/meta/snap.yaml
@@ -61,4 +61,4 @@ apps:
         command: bin/start
         stop-command: bin/stop
         daemon: simple
-        daemon-startup: inhibit
+        install-mode: daemon-inhibit
