tests: use os.query instead of $SPREAD_SYSTEM
Signed-off-by: Zygmunt Krynicki <me@zygoon.pl>

--- a/tests/core/fsck-on-boot/task.yaml
+++ b/tests/core/fsck-on-boot/task.yaml
@@ -10,34 +10,29 @@ prepare: |
   tests.cleanup prepare
 execute: |
   unmount_vfat() {
-    case "$SPREAD_SYSTEM" in
-      ubuntu-core-16-*)
-        # Refer to the core 16 PC gadget for details:
-        # https://github.com/snapcore/pc-amd64-gadget/blob/16/gadget.yaml
-        umount /boot/efi
-        umount /boot/grub
-        ;;
-      ubuntu-core-18-*)
-        # Refer to the core 18 PC gadget for details:
-        # https://github.com/snapcore/pc-amd64-gadget/blob/18/gadget.yaml
-        umount /boot/efi
-        umount /boot/grub
-        ;;
-      ubuntu-core-20-*)
-        # TODO:UC20 The property of having to keep a mounted vfat at all time
-        # is not the most fortunate. Any power loss will result in a dirty
-        # filesystem. Could ubuntu-seed be re-mounted read-only at some point
-        # during the start-up process?  Power loss on read-only vfat is
-        # harmless in comparison.
-        umount /run/mnt/ubuntu-seed/systems/*/snaps/snapd_*.snap
-        umount /var/lib/snapd/seed
-        umount /run/mnt/ubuntu-seed
-        ;;
-      *)
-        echo "Please adjust the test to support this core system"
-        false
-        ;;
-    esac
+    if os.query is-core16; then
+      # Refer to the core 16 PC gadget for details:
+      # https://github.com/snapcore/pc-amd64-gadget/blob/16/gadget.yaml
+      umount /boot/efi
+      umount /boot/grub
+    elif os.query is-core18; then
+      # Refer to the core 18 PC gadget for details:
+      # https://github.com/snapcore/pc-amd64-gadget/blob/18/gadget.yaml
+      umount /boot/efi
+      umount /boot/grub
+    elif os.query is-core20; then
+      # TODO:UC20 The property of having to keep a mounted vfat at all time
+      # is not the most fortunate. Any power loss will result in a dirty
+      # filesystem. Could ubuntu-seed be re-mounted read-only at some point
+      # during the start-up process?  Power loss on read-only vfat is
+      # harmless in comparison.
+      umount /run/mnt/ubuntu-seed/systems/*/snaps/snapd_*.snap
+      umount /var/lib/snapd/seed
+      umount /run/mnt/ubuntu-seed
+    else
+      echo "Please adjust the test to support this core system"
+      false
+    fi
   }
 
   case "$SPREAD_REBOOT" in
