rename "daemon-inhibit" -> "disable" and add a bunch of XXX

--- a/tests/lib/snaps/test-snapd-service/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-service/meta/snap.yaml
@@ -61,4 +61,4 @@ apps:
         command: bin/start
         stop-command: bin/stop
         daemon: simple
-        install-mode: daemon-inhibit
+        install-mode: disable
