--- a/tests/main/boot-state/task.yaml
+++ b/tests/main/boot-state/task.yaml
@@ -11,47 +11,66 @@ execute: |
     case "$SPREAD_SYSTEM" in
         ubuntu-core-16-*|ubuntu-core-18-*)
             # check snap_core and snap_kernel vars are set in bootnev
-            "$TESTSTOOLS"/boot-state bootenv | MATCH 'snap_core=core.*.snap'
-            "$TESTSTOOLS"/boot-state bootenv | MATCH 'snap_kernel=.*-kernel_.*.snap'
+            "$TESTSTOOLS"/boot-state bootenv show | MATCH 'snap_core=core.*.snap'
+            "$TESTSTOOLS"/boot-state bootenv show | MATCH 'snap_kernel=.*-kernel_.*.snap'
             ;;
         ubuntu-core-20-*)
             # check kernel_status var is set in bootnev
-            "$TESTSTOOLS"/boot-state bootenv | MATCH 'kernel_status='
+            "$TESTSTOOLS"/boot-state bootenv show | MATCH 'kernel_status='
             ;;
         *)
             # check bootnev command can be called
-            "$TESTSTOOLS"/boot-state bootenv     
+            "$TESTSTOOLS"/boot-state bootenv show
             ;; 
     esac
 
     # check the get-boot-path command
     case "$SPREAD_SYSTEM" in
         ubuntu-core-16-arm-*|ubuntu-core-18-arm-*|ubuntu-core-20-arm-*)
-            "$TESTSTOOLS"/boot-state get-boot-path | MATCH "/boot/uboot/"
+            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/uboot/"
             ;;
         fedora-*|opensuse-*|amazon-*|centos-*)
-            "$TESTSTOOLS"/boot-state get-boot-path | MATCH "/boot/grub2/"
+            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/grub2/"
             ;;
         *)
-            "$TESTSTOOLS"/boot-state get-boot-path | MATCH "/boot/grub/"
+            "$TESTSTOOLS"/boot-state boot-path | MATCH "/boot/grub/"
             ;;
     esac
 
     # check a new var can be set in bootenv
-    "$TESTSTOOLS"/boot-state bootenv | NOMATCH 'snap_boot_state_test='
-    "$TESTSTOOLS"/boot-state bootenv-set snap_boot_state_test test
-    "$TESTSTOOLS"/boot-state bootenv | MATCH 'snap_boot_state_test=test$'
+    "$TESTSTOOLS"/boot-state bootenv show | NOMATCH 'snap_test_1='
+    "$TESTSTOOLS"/boot-state bootenv set snap_test_1 test
+    "$TESTSTOOLS"/boot-state bootenv show | MATCH 'snap_test_1=test$'
+
+    # check a var can be showed in bootenv
+    "$TESTSTOOLS"/boot-state bootenv set snap_test_2 test
+    "$TESTSTOOLS"/boot-state bootenv show snap_test_1 | MATCH 'snap_test_1=test$'
+    "$TESTSTOOLS"/boot-state bootenv show snap_test_1 | NOMATCH 'snap_test_2'
 
     # check a var can be set even if it is already defined in bootenv
-    "$TESTSTOOLS"/boot-state bootenv-set snap_boot_state_test test
-    test "$("$TESTSTOOLS"/boot-state bootenv | grep -c snap_boot_state_test)" -eq 1
+    "$TESTSTOOLS"/boot-state bootenv set snap_test_1 test
+    test "$("$TESTSTOOLS"/boot-state bootenv show | grep -c snap_test_1)" -eq 1
 
     # check an existing var can be unset in bootenv
-    "$TESTSTOOLS"/boot-state bootenv-unset snap_boot_state_test
-    "$TESTSTOOLS"/boot-state bootenv | NOMATCH 'snap_boot_state_test='
+    "$TESTSTOOLS"/boot-state bootenv unset snap_test_1
+    "$TESTSTOOLS"/boot-state bootenv show | NOMATCH 'snap_test_1='
+    "$TESTSTOOLS"/boot-state bootenv show | MATCH 'snap_test_2=test$'
+    "$TESTSTOOLS"/boot-state bootenv unset snap_test_2
+    "$TESTSTOOLS"/boot-state bootenv show | NOMATCH 'snap_test_2='
 
     # check an unexisting var can be unset in bootenv
-    "$TESTSTOOLS"/boot-state bootenv-unset snap_boot_no_exist
+    "$TESTSTOOLS"/boot-state bootenv unset snap_boot_no_exist
 
     # wait-core-post-boot should finish inmediatly
     "$TESTSTOOLS"/boot-state wait-core-post-boot
+
+    # check bootenv needs a subcommand
+    "$TESTSTOOLS"/boot-state bootenv 2>&1 | MATCH "boot-state: unsupported bootenv subcommand"
+    "$TESTSTOOLS"/boot-state bootenv noexist 2>&1 | MATCH "boot-state: unsupported bootenv subcommand noexist"
+
+    # check var and value are needed to call bootenv set
+    "$TESTSTOOLS"/boot-state bootenv set 2>&1 | MATCH "boot-state: variable and value required to set in bootenv"
+    "$TESTSTOOLS"/boot-state bootenv set justvar 2>&1 | MATCH "boot-state: variable and value required to set in bootenv"
+
+    # check var is needed to call bootenv unset
+    "$TESTSTOOLS"/boot-state bootenv unset 2>&1 | MATCH "boot-state: variable required to unset from bootenv"
