many: get auth key at startup and unlink the user keyring
Start the snapd process in shared keyring mode, retrieve the TPM policy
update auth key in the device manager startup and unlink the root user
keyring to prevent access. Then use the auth key when updating the PCR
protection policy for the sealed encryption key.

Signed-off-by: Claudio Matsuoka <claudio.matsuoka@canonical.com>

--- a/data/systemd/snapd.service.in
+++ b/data/systemd/snapd.service.in
@@ -18,6 +18,7 @@ Type=notify
 SuccessExitStatus=42
 RestartPreventExitStatus=42
 KillMode=process
+KeyringMode=shared
 
 [Install]
 WantedBy=multi-user.target
