--- a/tests/main/remove-errors/task.yaml
+++ b/tests/main/remove-errors/task.yaml
@@ -1,14 +1,12 @@
 summary: Check remove command errors
 
 execute: |
-    #shellcheck source=tests/lib/systems.sh
-    . "$TESTSLIB"/systems.sh
     #shellcheck source=tests/lib/names.sh
     . "$TESTSLIB/names.sh"
 
     BASE_SNAP=core
     TARGET_SNAP=test-snapd-tools
-    if is_core18_system; then
+    if os.query is-core18; then
         BASE_SNAP=core18
         TARGET_SNAP=test-snapd-tools-core18
     fi
