--- a/tests/main/systemd-state/task.yaml
+++ b/tests/main/systemd-state/task.yaml
@@ -29,6 +29,19 @@ execute: |
     sleep 5
     not systemctl is-active testunit
     systemctl is-enabled testunit
+    "$TESTSTOOLS"/systemd-state stop-and-remove-unit testunit
+
+    # Create a service unit with overrides
+    "$TESTSTOOLS"/systemd-state create-and-start-unit testunit "sleep 10" --overrides "TESTVAR=TESTVAL"
+    systemctl cat testunit | MATCH "Environment=TESTVAR=TESTVAL"
+    "$TESTSTOOLS"/systemd-state stop-and-remove-unit testunit
+
+    # Create a service unit with overrides for a persistent unit
+    "$TESTSTOOLS"/systemd-state create-and-start-unit testunit "sleep 10" --overrides "[Unit]\nTESTVAR=TESTVAL" --persistent
+    systemctl cat testunit | MATCH "TESTVAR=TESTVAL"
+    test -f /etc/systemd/system/testunit.service.d/override.conf
+    "$TESTSTOOLS"/systemd-state stop-and-remove-unit testunit
+    test ! -d /etc/systemd/system/testunit.service.d
 
     # Delete the created service unit
     "$TESTSTOOLS"/systemd-state stop-and-remove-unit testunit
