--- a/tests/nested/core20/gadget-reseal/task.yaml
+++ b/tests/nested/core20/gadget-reseal/task.yaml
@@ -46,6 +46,9 @@ execute: |
     nested_wait_for_reboot "${boot_id}"
     nested_exec sudo snap watch "${REMOTE_CHG_ID}"
 
+    # sanity check that the gadget asset was changed
+    nested_exec sudo grep -q -a "This program cannot be run in XXX mode" /run/mnt/ubuntu-boot/EFI/boot/grubx64.efi
+
     # the gadget has changed, we should see resealing
     SEALED_KEY_MTIME_3="$(nested_exec sudo stat --format="%Y" /run/mnt/ubuntu-seed/device/fde/ubuntu-data.sealed-key)"
     test "$SEALED_KEY_MTIME_3" -gt "$SEALED_KEY_MTIME_2"
