--- a/tests/nested/manual/snapd-refresh-from-old/task.yaml
+++ b/tests/nested/manual/snapd-refresh-from-old/task.yaml
@@ -5,6 +5,11 @@ details: |
 systems: [ubuntu-18.04-*]
 
 environment:
+  # test variants:
+  # latest_only refreshes to snapd from current source tree only,
+  # edge_first refreshes to snapd/core18 from edge, then to current snapd.
+  VARIANT/latest_only: latest_only
+  VARIANT/edge_first: edge_first
   NESTED_BUILD_SNAPD_FROM_CURRENT: false
   NESTED_IMAGE_ID: snapd-refresh-from-old
   SNAPD_SNAP_URL: https://storage.googleapis.com/spread-snapd-tests/snaps/snapd_2.45.2_5760.snap
@@ -37,26 +42,28 @@ execute: |
 
   INITIAL_BOOT_ID=$(nested_get_boot_id)
 
-  # refresh to latest snapd from store, this will drop from ssh.
-  echo "Refreshing snapd and core18 from the store"
-  nested_exec "sudo snap refresh" || true
+  if [ "$SPREAD_VARIANT" = "edge_first" ]; then
+    # refresh to latest snapd from store, this will drop from ssh.
+    echo "Refreshing snapd and core18 from the store"
+    nested_exec "sudo snap refresh" || true
 
-  nested_wait_for_reboot "$INITIAL_BOOT_ID"
-  if nested_exec "snap list snapd" | MATCH "snapd.*5760"; then
-    echo "unexpected snapd rev 5760"
-    exit 1
-  fi
-
-  # this change is not immediately done and needs a retry
-  for _ in $(seq 1 10); do
-    if nested_exec "snap changes" | MATCH ".* Done .* Refresh snaps.*\"snapd\""; then
-      break
+    nested_wait_for_reboot "$INITIAL_BOOT_ID"
+    if nested_exec "snap list snapd" | MATCH "snapd.*5760"; then
+      echo "unexpected snapd rev 5760"
+      exit 1
     fi
-    sleep 1
-  done
 
-  nested_exec "snap changes" | MATCH ".* Done .* Refresh snaps.*\"snapd\""
-  nested_exec "snap changes" | MATCH ".* Done .* Refresh snaps.*\"core18\""
+    # this change is not immediately done and needs a retry
+    for _ in $(seq 1 10); do
+      if nested_exec "snap changes" | MATCH ".* Done .* Refresh snaps.*\"snapd\""; then
+        break
+      fi
+      sleep 1
+    done
+
+    nested_exec "snap changes" | MATCH ".* Done .* Refresh snaps.*\"snapd\""
+    nested_exec "snap changes" | MATCH ".* Done .* Refresh snaps.*\"core18\""
+  fi
 
   echo "Now refresh snapd with current tree"
   nested_copy "snapd-from-deb.snap"
