tests/nested/: uc20: use the patched pc gadget snap or patch it directly in the test
The pc gadget snap may get patched during the nested suite preparation, making
it incompatible with one from the store. With the current changes we also
require ubuntu-save to be present in an encrypted system. Make sure that tests
are set up correctly.

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/nested/manual/core20-early-config/task.yaml
+++ b/tests/nested/manual/core20-early-config/task.yaml
@@ -23,6 +23,9 @@ prepare: |
     snap download --basename=pc --channel="20/edge" pc
     unsquashfs -d pc-gadget pc.snap
 
+    # ensure ubuntu-save is there
+    nested_ensure_ubuntu_save pc-gadget
+
     cat defaults.yaml >> pc-gadget/meta/gadget.yaml
     mkdir -p pc-gadget/meta/hooks
     cp install pc-gadget/meta/hooks/
