--- a/tests/nested/core20/gadget-reseal/task.yaml
+++ b/tests/nested/core20/gadget-reseal/task.yaml
@@ -25,8 +25,8 @@ execute: |
     SNAKEOIL_CERT="$PWD/$KEY_NAME.pem"
     # ensure clean pc-gadget dir
     rm -rf pc-gadget
-    snap download --basename=pc --channel="20/edge" pc
-    unsquashfs -d pc-gadget pc.snap
+    GADGET_SNAP="$(ls "$NESTED_ASSETS_DIR"/pc_*.snap)"
+    unsquashfs -d pc-gadget "$GADGET_SNAP"
     # change a few bytes in the compat header and ensure sed worked
     sed -i 's/This program cannot be run in DOS mode/This program cannot be run in XXX mode/' pc-gadget/grubx64.efi
     grep -q -a "This program cannot be run in XXX mode" pc-gadget/grubx64.efi
