--- a/tests/nested/core20/tpm/task.yaml
+++ b/tests/nested/core20/tpm/task.yaml
@@ -21,6 +21,10 @@ execute: |
     echo "and has the expected owner and permissions"
     nested_exec "stat --printf='%u:%g %a' /var/lib/snapd/device/fde/recovery.key" | MATCH '^0:0 600$'
 
+    echo "and the tpm-{policy-auth-key,lockout-auth} files are in ubuntu-save"
+    nested_exec "test -e /var/lib/snapd/save/device/fde/tpm-policy-auth-key"
+    nested_exec "test -e /var/lib/snapd/save/device/fde/tpm-lockout-auth"
+
     # grab modeenv content
     nested_exec "cat /var/lib/snapd/modeenv" > modeenv
     # and checksums
