--- a/tests/main/theme-install/task.yaml
+++ b/tests/main/theme-install/task.yaml
@@ -13,7 +13,7 @@ execute: |
     snap install gtk-common-themes
 
     echo "Check for presence of a collection of themes"
-    test-snapd-curl.curl -sSf -o response.txt --unix-socket /run/snapd.socket 'http://localhost/v2/themes?gtk-theme=Yaru&gtk-theme=TraditionalHumanized&icon-theme=Yaru&icon-theme=Adwaita&sound-theme=Yaru&sound-theme=No-Such-Theme'
+    test-snapd-curl.curl -sSf -o response.txt --unix-socket /run/snapd.socket 'http://localhost/v2/accessories/themes?gtk-theme=Yaru&gtk-theme=TraditionalHumanized&icon-theme=Yaru&icon-theme=Adwaita&sound-theme=Yaru&sound-theme=No-Such-Theme'
     jq . < response.txt
 
     jq -r '.result."gtk-themes".Yaru' < response.txt | MATCH '^installed'
@@ -24,7 +24,7 @@ execute: |
     jq -r '.result."sound-themes"."No-Such-Theme"' < response.txt | MATCH '^unavailable'
 
     echo "We can request installation of a snap to satisfy a theme"
-    test-snapd-curl.curl -sSf -o response.txt --unix-socket /run/snapd.socket -d '{"gtk-themes":["TraditionalHumanized"]}' http://localhost/v2/themes
+    test-snapd-curl.curl -sSf -o response.txt --unix-socket /run/snapd.socket -d '{"gtk-themes":["TraditionalHumanized"]}' http://localhost/v2/accessories/themes
     jq . < response.txt
 
     echo "Wait for change to complete"
@@ -35,6 +35,6 @@ execute: |
     snap list | grep gtk-theme-traditionalhumanized
 
     echo "The theme now reports as installed"
-    test-snapd-curl.curl -sSf -o response.txt --unix-socket /run/snapd.socket 'http://localhost/v2/themes?gtk-theme=TraditionalHumanized'
+    test-snapd-curl.curl -sSf -o response.txt --unix-socket /run/snapd.socket 'http://localhost/v2/accessories/themes?gtk-theme=TraditionalHumanized'
     jq -r '.result."gtk-themes".TraditionalHumanized' < response.txt | MATCH '^installed'
 
