interfaces: remove trailing slashes from x11 mount entries
The trailing slashes are rejected by snap-update-ns as they don't pass
the filepath.Clean() check.

--- a/tests/main/interfaces-x11-unix-socket/task.yaml
+++ b/tests/main/interfaces-x11-unix-socket/task.yaml
@@ -45,3 +45,6 @@ execute: |
     echo "Hello from host system" | nc -l -w 0 -U /tmp/.X11-unix/X0 &
 
     x11-client | MATCH "Hello from host system"
+
+    echo "The client cannot remove host system sockets either"
+    not x11-client.rm -f /tmp/.X11-unix/X0
