tests: add network plug to test snaps for access to /usr/bin/nc

--- a/tests/main/interfaces-x11-unix-socket/x11-client/meta/snap.yaml
+++ b/tests/main/interfaces-x11-unix-socket/x11-client/meta/snap.yaml
@@ -6,7 +6,7 @@ description: Fake x11 client
 apps:
   x11-client:
     command: bin/xclient.sh
-    plugs: [x11]
+    plugs: [x11, network]
   rm:
     command: bin/rm.sh
     plugs: [x11]
