--- a/tests/nested/manual/grade-signed-above-testkeys-boot/task.yaml
+++ b/tests/nested/manual/grade-signed-above-testkeys-boot/task.yaml
@@ -99,7 +99,8 @@ prepare: |
 
   # TODO: enable when ready
   # start fake device svc
-  # systemd_create_and_start_unit fakedevicesvc "$(command -v fakedevicesvc) localhost:11029"
+  # #shellcheck disable=SC2148
+  #  systemd-run --unit fakedevicesvc fakedevicesvc localhost:11029
 
   "$TESTSTOOLS"/nested-state build-image core
   "$TESTSTOOLS"/nested-state create-vm core
@@ -109,6 +110,9 @@ restore: |
       echo "This test needs test keys to be trusted"
       exit
   fi
+
+  # stop fake device svc
+  # systemctl stop fakedevicesvc
 
   #shellcheck source=tests/lib/store.sh
   . "$TESTSLIB"/store.sh
