github: run nested suite when commit is pushed to release branch
A cherry-picks to the relase branches are sometimes applied by directly pushing
the repository rather than via a pull request. Make sure that nested tests are
run when pushing to the release branch.

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -286,7 +286,9 @@ jobs:
               echo "::set-output name=already-ran::true"
           fi
     - name: Run spread tests
-      if: "contains(github.event.pull_request.labels.*.name, 'Run nested') && steps.cached-results.outputs.already-ran != 'true'"
+      # run if the commit is pushed to the release/* branch or there is a 'Run
+      # nested' label set on the PR
+      if: "(contains(github.event.pull_request.labels.*.name, 'Run nested') || contains(github.ref, 'refs/heads/release/')) && steps.cached-results.outputs.already-ran != 'true'"
       env:
           SPREAD_GOOGLE_KEY: ${{ secrets.SPREAD_GOOGLE_KEY }}
       run: |
