tests/main/cloud-init: enable restrict file check on UC20
UC20 now has cloud-init restricted too.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/tests/main/cloud-init/task.yaml
+++ b/tests/main/cloud-init/task.yaml
@@ -76,10 +76,7 @@ execute: |
     snap_cloud_region=$(snap get core cloud.region)
     test "$cloud_region" = "$snap_cloud_region"
 
-    # if we are on UC16 / UC18, then also check that we wrote out a restricting
-    # cloud-init file
-    # TODO:UC20: adapt for UC20 when cloud-init is supported on UC20
-    if [[ "$SPREAD_SYSTEM" == ubuntu-core-1* ]]; then
+    if [[ "$SPREAD_SYSTEM" == ubuntu-core-* ]]; then
         # TODO: is there a race here with snapd restricting cloud-init and us
         # checking that it was restricted?
         echo "Test that cloud-init restrict file was written"
